<resources>
    <string name="app_name" translatable="false">Call_Theme</string>

    <string name="retry_internet">Retry internet</string>
    <string name="click_back">Click back again to exit</string>
    <string name="no_internet">No Internet</string>
    <string name="check_connection_settings_and_try_again">Check connection settings and try again.</string>
    <string name="error">Error</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="select_language">Select language</string>
    <string name="done">Done</string>
    <string name="intro_title_1">Colorful call screen</string>
    <string name="intro_content_1">Easily make beautiful call screen with 100+ themes</string>
    <string name="intro_title_2">Customize every contact</string>
    <string name="intro_content_2">Give incoming calls a new look, more impressive and colorful</string>
    <string name="intro_title_3">Alert on call</string>
    <string name="intro_content_3">Change Flash, Vibrate and Ringtone to your personal taste</string>
    <string name="theme_call">Theme Call</string>
    <string name="diy_theme">DIY Theme</string>
    <string name="alert">Alert</string>
    <string name="ringtone">Ringtone</string>
    <string name="setting">Setting</string>
    <string name="enable_call_theme">Enable Call Theme</string>
    <string name="language">Language</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="more_app">More App</string>
    <string name="background">Background</string>
    <string name="avatar">Avatar</string>
    <string name="call_icon">Call icon</string>
    <string name="save">Save</string>
    <string name="preview">Preview</string>
    <string name="turn_on_the_screen">Turn On The Screen</string>
    <string name="phone_contacts_and_storage">Phone, Contacts and Storage</string>
    <string name="to_turn_on_phone_calls_contacts_and_storage">To turn on phone calls contacts and storage</string>
    <string name="call_screen">Call Screen</string>
    <string name="screen_permissions">Screen Permissions</string>
    <string name="change_systerm_settings">Change system settings</string>
    <string name="to_use_set_ringtone_for_app">To use set ringtone for app</string>
    <string name="to_display_the_call_screen">To display the call screen</string>
    <string name="to_display_incoming_calls">To display incoming calls</string>
    <string name="ringtone_library">Ringtone Library</string>
    <string name="audio_from_your_device">Audio From Your Device</string>
    <string name="flash_vibrate_test">Flash &amp; Vibrate test</string>
    <string name="select_flash_type">Select flash type</string>
    <string name="enable_flash_alert">Enable Flash Alert</string>
    <string name="enable_vibrate">Enable Vibrate</string>
    <string name="select_vibrate_type">Select vibrate type</string>
    <string name="downloading">Downloading</string>
    <string name="downloaded">Downloaded</string>
    <string name="created">Created</string>
    <string name="saved">Saved</string>
    <string name="permission_denied">Permission denied</string>
    <string name="flash_type">Flash Type</string>
    <string name="vibrate_ringtone">Vibrate Ringtone</string>
    <string name="no_theme_downloaded">No theme downloaded</string>
    <string name="no_theme_created">No theme created</string>
    <string name="do_you_want_to_delete">Do you want to Delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="congratulation">Congratulation!</string>
    <string name="you_have_successfully_installed_the_calling_screen">You have successfully installed the calling screen</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="content_dialog_quit_edit">You are editing. Do you want to close and cancel all editing?</string>
    <string name="theme_call_is_available">Theme call is available</string>
    <string name="warning">Warning</string>
    <string name="apply">Apply</string>
    <string name="content_information_more_help">Xiami, Oppo, Vivo, OnePlus and other mobile phones need to enable \"Lock screen\" permission to display call theme on lock screen page normally</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="is_calling">Is Calling…</string>
    <string name="call_ended">Call Ended</string>
    <string name="txt_disable_dialler">Please change dialler with other app to disable theme call!!</string>
    <string name="feature_is_being_developed">Feature is being developed.</string>
    <string name="current_ringtone_can_not_play">The current ringtone is the device\'s default and cannot be played</string>
    <string name="there_an_incoming_call">There\'s an incoming call</string>
    <string name="call_in_progress">Call in progress</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="you_must_grant_permission_to_use_the_application">You must grant permission to use the application!</string>
    <string name="select_image">Select Image</string>

</resources>