<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_app_v1"
    android:orientation="vertical"
    tools:context=".ui.setting.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_semi_bold_600"
            android:gravity="center_vertical|left"
            android:text="@string/setting"
            android:textColor="@color/black_app"
            android:textSize="22sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="6dp"
        android:layout_marginHorizontal="20dp">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="8dp"
            android:src="@drawable/ic_language"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_semi_bold_600"
            android:gravity="center_vertical|left"
            android:text="@string/enable_call_theme"
            android:textColor="@color/black_app"
            android:textSize="16sp" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/swAnimation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:thumbTint="@color/sw_thumb_home"
            app:trackTint="@color/sw_track_home" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="6dp"
        android:layout_marginHorizontal="20dp">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="8dp"
            android:src="@drawable/ic_language"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_semi_bold_600"
            android:gravity="center_vertical|left"
            android:text="@string/language"
            android:textColor="@color/black_app"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="6dp"
        android:layout_marginHorizontal="20dp">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="8dp"
            android:src="@drawable/ic_setting_share"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_semi_bold_600"
            android:gravity="center_vertical|left"
            android:text="@string/share_app"
            android:textColor="@color/black_app"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="6dp"
        android:layout_marginHorizontal="20dp">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="8dp"
            android:src="@drawable/ic_rate_rate"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_semi_bold_600"
            android:gravity="center_vertical|left"
            android:text="@string/rate_app"
            android:textColor="@color/black_app"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="6dp"
        android:layout_marginHorizontal="20dp">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="12dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_semi_bold_600"
            android:gravity="center_vertical|left"
            android:text="@string/send_feedback"
            android:textColor="@color/black_app"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="6dp"
        android:layout_marginHorizontal="20dp">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="12dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_semi_bold_600"
            android:gravity="center_vertical|left"
            android:text="@string/more_app"
            android:textColor="@color/black_app"
            android:textSize="16sp" />

    </LinearLayout>



</LinearLayout>