<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/layout_round"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_semi_bold_600"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/turn_on_the_screen"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTitle1"
            android:layout_width="0dp"
            android:gravity="center_vertical|left"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_medium_500"
            android:includeFontPadding="false"
            android:text="@string/phone_contacts_and_storage"
            android:textColor="@color/black_app"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/swChangeDialler"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/txtContent1"
            android:layout_width="0dp"
            android:gravity="center_vertical|left"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_regular_400"
            android:includeFontPadding="false"
            android:text="@string/to_turn_on_phone_calls_contacts_and_storage"
            android:textColor="@color/black_app"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/swChangeDialler"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitle1" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swChangeDialler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:thumb="@drawable/sw_thumb_home"
            app:layout_constraintBottom_toBottomOf="@+id/txtTitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txtTitle1"
            app:track="@drawable/sw_track_home" />

        <TextView
            android:id="@+id/txtTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_medium_500"
            android:includeFontPadding="false"
            android:text="@string/call_screen"
            android:textColor="@color/black_app"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtContent1" />

        <TextView
            android:id="@+id/txtContent2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_regular_400"
            android:includeFontPadding="false"
            android:text="@string/to_display_incoming_calls"
            android:textColor="@color/black_app"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitle2" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swReadContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:thumb="@drawable/sw_thumb_home"
            app:layout_constraintBottom_toBottomOf="@+id/txtTitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txtTitle2"
            app:track="@drawable/sw_track_home" />

        <TextView
            android:id="@+id/txtTitle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_medium_500"
            android:includeFontPadding="false"
            android:text="@string/screen_permissions"
            android:textColor="@color/black_app"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtContent2" />

        <TextView
            android:id="@+id/txtContent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_regular_400"
            android:includeFontPadding="false"
            android:text="@string/to_display_the_call_screen"
            android:textColor="@color/black_app"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitle3" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swOverlayApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:thumb="@drawable/sw_thumb_home"
            app:layout_constraintBottom_toBottomOf="@+id/txtTitle3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txtTitle3"
            app:track="@drawable/sw_track_home" />

        <TextView
            android:id="@+id/txtTitle4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_medium_500"
            android:includeFontPadding="false"
            android:text="@string/change_systerm_settings"
            android:textColor="@color/black_app"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtContent3" />

        <TextView
            android:id="@+id/txtContent4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_regular_400"
            android:includeFontPadding="false"
            android:text="@string/to_use_set_ringtone_for_app"
            android:textColor="@color/black_app"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitle4" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swAnswerCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:thumb="@drawable/sw_thumb_home"
            app:layout_constraintBottom_toBottomOf="@+id/txtTitle4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txtTitle4"
            app:track="@drawable/sw_track_home" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>