<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="40dp"
    android:background="@drawable/bg_dialog_v1"
    android:paddingHorizontal="12dp"
    android:paddingVertical="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="98dp"
            android:layout_height="98dp"
            android:layout_marginBottom="12dp"
            android:src="@drawable/wifi_off" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_semi_bold_600"
            android:gravity="center"
            android:text="@string/no_internet"
            android:textColor="#3F3F4B"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_regular_400"
            android:gravity="center"
            android:paddingHorizontal="40dp"
            android:text="@string/check_connection_settings_and_try_again"
            android:textColor="#3F3F4B"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_semi_bold_600"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:text="@string/retry_internet"
            android:background="@drawable/bg_btn_apply_v2"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/prgLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/black_app" />

</RelativeLayout>