<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_app_v1"
    tools:context=".ui.app.alert.AlertFragment">

    <LinearLayout
        android:id="@+id/llToolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_semi_bold_600"
            android:gravity="center_vertical|left"
            android:text="@string/alert"
            android:textColor="@color/black_app"
            android:textSize="22sp" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_play_gun" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular_400"
        android:text="@string/flash_vibrate_test"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_ringtone_library" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium_500"
            android:gravity="center_vertical|left"
            android:text="@string/enable_flash_alert"
            android:textColor="@color/black_app"
            android:textSize="18sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swEnableFlash"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:thumb="@drawable/sw_thumb_home"
            app:track="@drawable/sw_track_home" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llChooseFlash"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:fontFamily="@font/roboto_medium_500"
            android:gravity="center_vertical|left"
            android:text="@string/select_flash_type"
            android:textColor="@color/black_app"
            android:textSize="18sp" />


        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:scaleX="-1"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_back" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black_app"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_ringtone_library" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium_500"
            android:gravity="center_vertical|left"
            android:text="@string/enable_vibrate"
            android:textColor="@color/black_app"
            android:textSize="18sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swEnableVibrate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:thumb="@drawable/sw_thumb_home"
            app:track="@drawable/sw_track_home" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llChooseVibrate"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:fontFamily="@font/roboto_medium_500"
            android:gravity="center_vertical|left"
            android:text="@string/select_vibrate_type"
            android:textColor="@color/black_app"
            android:textSize="18sp" />


        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:scaleX="-1"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_back" />

    </LinearLayout>

</LinearLayout>